--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
     </parent>
 
     <groupId>com.knife</groupId>
-    <artifactId>knife-util</artifactId>
+    <artifactId>better-util</artifactId>
     <version>0.0.1</version>
 
     <packaging>jar</packaging>
-    <name>knife-util</name>
-    <description>knife-util</description>
+    <name>better-util</name>
+    <description>better-util</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
