--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,31 @@
     <packaging>jar</packaging>
     <name>better-util</name>
     <description>better-util</description>
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
+
+    <!--开源协议...-->
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <scm>
+        <url>https://github.com/knife-blade/better-util</url>
+        <connection>https://github.com/knife-blade/better-util.git</connection>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>knifeout</id>
+            <name>knifeout</name>
+            <email>knife_out@163.com</email>
+            <roles>
+                <role>Developer</role>
+            </roles>
+            <timezone>+8</timezone>
+        </developer>
+    </developers>
 
     <dependencyManagement>
         <dependencies>
@@ -42,7 +64,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-            <scope>provided</scope>
         </dependency>
 
         <dependency>
