--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <version>0.0.1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
-    <name>better-util</name>
+    <name>{project.artifactId}</name>
     <description>better-util</description>
 
     <!--用于发布：开源协议...-->
