--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
 
     <groupId>com.suchtool</groupId>
     <artifactId>better-util</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
 
     <packaging>jar</packaging>
-    <name>{project.artifactId}</name>
+    <name>better-util</name>
     <description>better-util</description>
 
     <!--用于发布：开源协议...-->
