--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.13</version>
-        <relativePath/>
-    </parent>
-
     <groupId>com.suchtool</groupId>
     <artifactId>better-util</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
 
     <packaging>jar</packaging>
     <name>better-util</name>
@@ -42,6 +35,7 @@
                 <role>Developer</role>
             </roles>
             <timezone>+8</timezone>
+            <url>https://github.com/knife-blade/better-util</url>
         </developer>
     </developers>
 
@@ -51,6 +45,14 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>2020.0.1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-parent</artifactId>
+                <version>2.4.13</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
