--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.suchtool</groupId>
-    <artifactId>better-util</artifactId>
-    <version>0.0.2</version>
+    <artifactId>better-util-spring-boot-starter</artifactId>
+    <version>0.0.1</version>
 
     <packaging>jar</packaging>
     <name>better-util</name>
@@ -76,6 +76,16 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
             <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
