--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.suchtool</groupId>
-    <artifactId>better-util-spring-boot-starter</artifactId>
-    <version>0.0.2</version>
+    <artifactId>nice-util-spring-boot-starter</artifactId>
+    <version>0.0.1</version>
 
     <packaging>jar</packaging>
-    <name>better-util-spring-boot-starter</name>
-    <description>better util for java</description>
+    <name>nice-util-spring-boot-starter</name>
+    <description>nice util for java</description>
 
-    <url>https://github.com/knife-blade/better-util</url>
+    <url>https://github.com/knife-blade/nice-util</url>
 
     <dependencyManagement>
         <dependencies>
@@ -79,7 +79,7 @@
         </plugins>
     </build>
 
-    <!--用于发布：插件和仓库等信息-->
+    <!--用于发布-->
     <profiles>
         <profile>
             <id>ossrh</id>
@@ -173,27 +173,23 @@
         </profile>
     </profiles>
 
-    <!--用于发布：开源协议...-->
+    <!--用于发布-->
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
-    <!--用于发布：项目链接-->
     <scm>
-        <url>https://github.com/knife-blade/better-util</url>
-        <connection>https://github.com/knife-blade/better-util.git</connection>
+        <url>https://github.com/knife-blade/nice-util</url>
+        <connection>https://github.com/knife-blade/nice-util.git</connection>
     </scm>
-    <!--用于发布：开发者信息-->
     <developers>
         <developer>
             <id>knifeout</id>
             <name>knifeout</name>
             <email>knife_out@163.com</email>
-            <roles>
-                <role>Developer</role>
-            </roles>
+            <url>https://github.com/knife-blade</url>
         </developer>
     </developers>
 
