--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.suchtool</groupId>
     <artifactId>nicetool-spring-boot-starter</artifactId>
-    <version>1.1.25</version>
+    <version>1.1.26</version>
 
     <packaging>jar</packaging>
     <name>nicetool-spring-boot-starter</name>
@@ -88,37 +88,23 @@
     <!--用于发布-->
     <profiles>
         <profile>
-            <id>ossrh</id>
+            <id>central</id>
 
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
 
-            <distributionManagement>
-                <snapshotRepository>
-                    <!--此id必须与setting.xml的servers=>server=>id中指定的一致-->
-                    <id>ossrh</id>
-                    <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-                </snapshotRepository>
-                <repository>
-                    <id>ossrh</id>
-                    <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-                </repository>
-            </distributionManagement>
-
             <build>
                 <plugins>
-                    <!--发布到staging-->
                     <plugin>
-                        <groupId>org.sonatype.plugins</groupId>
-                        <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.8</version>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <version>0.7.0</version>
                         <extensions>true</extensions>
                         <configuration>
-                            <serverId>ossrh</serverId>
-                            <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-                            <!--自动release-->
-                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                            <publishingServerId>server-central</publishingServerId>
+                            <autoPublish>true</autoPublish>
+                            <waitUntil>published</waitUntil>
                         </configuration>
                     </plugin>
 
